--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "UI to Open Home project",
   "main": "index.js",
   "scripts": {
+    "postinstall": "mkdir -p src/public/js/dist && cp node_modules/semantic-ui-css/semantic.min.css src/public/css/",
     "start": "nodemon src/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch-js": "watchify src/public/js/src/*.js -o src/public/js/dist/bundle.js -dv --transform [ babelify ]",
@@ -31,11 +32,13 @@
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "nconf": "^0.8.5",
+    "nodemon": "^1.12.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
