--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,12 @@
             }
         }],
         "react"
+    ],
+    "plugins": [
+      ["transform-object-rest-spread",
+        {
+          "useBuiltIns": true
+        }
+      ]
     ]
 }
