--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/pvorotnikov/open-home-ui#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
@@ -31,6 +32,7 @@
     "express-session": "^1.15.6",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
+    "mongoose": "^4.13.0",
     "morgan": "^1.9.0",
     "nconf": "^0.8.5",
     "nodemon": "^1.12.1",
