--- a/helpers/Dockerfile
+++ b/helpers/Dockerfile
@@ -3,14 +3,14 @@ FROM node:8
 # ----------------------
 # create application structure
 # ----------------------
-RUN mkdir -p /usr/app
+RUN mkdir -p /usr/app/src
 
 # ----------------------
 # install dependencies
 # create caching layer
 # ----------------------
 COPY ["package.json", "package-lock.json", "/usr/app/"]
-COPY ["src", "/usr/app"]
+COPY ["src", "/usr/app/src/"]
 RUN cd /usr/app && npm install
 
 # ----------------------
