--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
     "PORT": 8080,
-    "ENCRYPTION_SECRET": "bla"
+    "TOKEN_EXPIRATION_TIME": 1800,
+    "ENCRYPTION_SECRET": "my-super-secret-pass"
 }
