Fixed a number of problems with token refresh flow (All caused by syntax error, of course). Extended token expiration time to 30min for access and 1h for refresh tokens. Migrated all API calls through request helper

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,6 @@
 {
     "PORT": 8080,
-    "TOKEN_EXPIRATION_TIME": 1800,
+    "ACCESS_TOKEN_EXPIRATION_TIME": 1800,
+    "REFRESH_TOKEN_EXPIRATION_TIME": 3600,
     "ENCRYPTION_SECRET": "my-super-secret-pass"
 }
