--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "UI to Open Home project",
   "main": "index.js",
   "scripts": {
-    "postinstall": "mkdir -p src/public/js/dist && cp node_modules/semantic-ui-css/semantic.min.css src/public/css/",
+    "postinstall": "mkdir -p src/public/js/dist && mkdir -p src/public/css && cp node_modules/semantic-ui-css/semantic.min.css src/public/css/",
     "start": "nodemon src/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -Rf src/public/js/dist && mkdir -p src/public/js/dist",
@@ -30,7 +30,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "javascript-state-machine": "^3.0.1",
+    "javascript-state-machine": "^2.4.0",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
