--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "hat": "0.0.3",
     "javascript-state-machine": "^2.4.0",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
