--- a/helpers/Dockerfile
+++ b/helpers/Dockerfile
@@ -9,9 +9,10 @@ RUN mkdir -p /usr/app/src
 # install dependencies
 # create caching layer
 # ----------------------
-COPY ["package.json", "package-lock.json", "/usr/app/"]
+COPY ["package.json", "package-lock.json", ".babelrc", "/usr/app/"]
 COPY ["src", "/usr/app/src/"]
-RUN cd /usr/app && npm install
+RUN cd /usr/app && npm install --unsafe-perm
+RUN cd /usr/app && npm run build
 
 # ----------------------
 # create entry point
