--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,7 @@
     "PORT": 8080,
     "ACCESS_TOKEN_EXPIRATION_TIME": 1800,
     "REFRESH_TOKEN_EXPIRATION_TIME": 3600,
-    "ENCRYPTION_SECRET": "my-super-secret-pass"
+    "ENCRYPTION_SECRET": "my-super-secret-pass",
+    "BROKER_HOST": "broker",
+    "BROKER_PORT": 1883
 }
