--- a/src/config.json
+++ b/src/config.json
@@ -4,5 +4,7 @@
     "REFRESH_TOKEN_EXPIRATION_TIME": 3600,
     "ENCRYPTION_SECRET": "my-super-secret-pass",
     "BROKER_HOST": "broker",
-    "BROKER_PORT": 1883
+    "BROKER_PORT": 1883,
+    "HANDLER_KEY": "handler-key",
+    "HANDLER_SECRET": "handler-secret"
 }
