Removed requirement for republish topic to be different than publish since republishing is made in the scope of an application, while publishing is in the scope of a gateway. They will (almost) never collide

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
         depends_on:
             - broker
             - db
-        #volumes: # for development purposes
-        #    - ./src:/usr/app/src
+        volumes: # for development purposes
+            - ./src:/usr/app/src
 
     db:
         image: mongo:latest
