Moved all deployment-specific configuration from config file to docker-compose env variables of the services. The composition and orchestration are responsible for configuring and securing the services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,12 @@ services:
         ports:
             - 0.0.0.0:8080:8080
         depends_on:
-            - broker
             - db
+        environment:
+            ENCRYPTION_SECRET: my-super-secret-pass # JWT signing
+            BROKER_HOST: broker                     # ui-broker connection
+            HANDLER_KEY: handler-key                # ui credentials
+            HANDLER_SECRET: handler-secret          # ui credentials
         volumes: # for development purposes
             - ./src:/usr/app/src
 
