--- a/helpers/Dockerfile-broker
+++ b/helpers/Dockerfile-broker
@@ -9,9 +9,10 @@ RUN wget https://bintray.com/rabbitmq/community-plugins/download_file?file_path=
     mv /tmp/auth_backend_http.ez /usr/lib/rabbitmq/lib/rabbitmq_server-3.6.10/plugins/
 
 # ----------------------
-# add config file
+# add config file and certificates
 # ----------------------
-COPY ["./rabbitmq.config", "/etc/rabbitmq/rabbitmq.config"]
+COPY ["./broker/rabbitmq.config", "/etc/rabbitmq/rabbitmq.config"]
+COPY ["./broker/certs", "/etc/rabbitmq/certs"]
 
 # ----------------------
 # enable plubins
