--- a/broker/rabbitmq.config
+++ b/broker/rabbitmq.config
@@ -3,28 +3,15 @@
         { auth_backends, [ rabbit_auth_backend_http ] },
         { loopback_users, [ ] },
         { tcp_listeners, [ 5672 ] },
-        { ssl_listeners, [ 5671 ] },
+        { ssl_listeners, [ ] },
         { default_user, <<"admin">> },
         { default_pass, <<"admin">> },
-        { hipe_compile, false },
-        { ssl_options, [
-            { cacertfile, "/etc/rabbitmq/certs/ca_certificate.pem" },
-            { certfile,   "/etc/rabbitmq/certs/server_certificate.pem" },
-            { keyfile,    "/etc/rabbitmq/certs/server_key.pem" },
-            { password,   "openiot" },
-            { verify,     verify_none },
-            { fail_if_no_peer_cert, false }
-        ] }
+        { hipe_compile, false }
     ] },
 
     % { rabbitmq_management, [ { listener, [
     %     { port, 15672 },
-    %     { ssl, true },
-    %     { ssl_opts, [
-    %         { cacertfile, "/etc/rabbitmq/certs/ca_certificate.pem" },
-    %         { certfile,   "/etc/rabbitmq/certs/server_certificate.pem" },
-    %         { keyfile,    "/etc/rabbitmq/certs/server_key.pem" }
-    %     ] }
+    %     { ssl, false }
     % ] } ] },
 
     { rabbitmq_auth_backend_http, [
@@ -33,24 +20,5 @@
         { vhost_path,    "http://ui:8080/api/broker/vhost" },
         { resource_path, "http://ui:8080/api/broker/resource" },
         { topic_path,    "http://ui:8080/api/broker/topic" }
-    ] },
-
-    { rabbitmq_mqtt, [
-        { ssl_listeners,    [ 8883 ] },
-        { tcp_listeners,    [ 1883 ] }
-    ] },
-
-    { rabbitmq_web_mqtt, [
-        { tcp_config, [
-            { port, 15675 }
-        ] },
-        { ssl_config, [
-            { port,       15676 },
-            { backlog,    1024 },
-            { cacertfile, "/etc/rabbitmq/certs/ca_certificate.pem" },
-            { certfile,   "/etc/rabbitmq/certs/server_certificate.pem" },
-            { keyfile,    "/etc/rabbitmq/certs/server_key.pem" },
-            { password,   "openiot" }
-        ] }
     ] }
 ].
