--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,13 +1,17 @@
+global
+    ssl-default-bind-options no-sslv3
 
-frontend mqtts
-    bind *:8883 ssl crt /certs/server_combined.pem
+frontend mqtt
+    bind        *:1883
+    bind        *:8883          ssl crt /certs/server_combined.pem
+    timeout     client          1m
     default_backend mqtt
-    mode tcp
 
     # Use this to avoid the connection loss when client subscribed for a topic and its idle for sometime
-    option clitcpka # For TCP keep-alive
-    timeout client 3h # By default TCP keep-alive interval is 2hours in OS kernal, 'cat /proc/sys/net/ipv4/tcp_keepalive_time'
-    timeout server 3h # By default TCP keep-alive interval is 2hours in OS kernal
+    option      clitcpka # For TCP keep-alive
 
 backend mqtt
-    server broker broker:1883 check
+    mode        tcp
+    server      br01            broker:1883     check
+    timeout     connect         1m
+    timeout     server          1m
