--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,27 +3,22 @@ version: '2'
 services:
 
     proxy:
-        image: jwilder/nginx-proxy
+        build:
+            context: ./
+            dockerfile: ./proxy/Dockerfile
+        image: open-iot-proxy:latest
         ports:
             - 80:80
             - 443:443
             - 1883:1883
             - 8883:8883
+            - 15675:15675
+            - 15676:15676
         volumes:
             - /var/run/docker.sock:/tmp/docker.sock:ro
-            - ./proxy/nginx.tmpl:/app/nginx.tmpl
+            - ./proxy/dev.conf:/etc/nginx/nginx.conf
             - ./certs/server_key.pem:/etc/nginx/certs/127.0.0.1.key
             - ./certs/server_certificate.pem:/etc/nginx/certs/127.0.0.1.crt
-
-    # haproxy:
-    #     build:
-    #         context: ./
-    #         dockerfile: ./haproxy/Dockerfile
-    #     ports:
-    #         - 0.0.0.0:1883:1883
-    #         - 0.0.0.0:8883:8883
-    #     volumes:
-    #         - ./certs:/certs
 
     broker:
         build:
@@ -31,8 +26,6 @@ services:
             dockerfile: ./broker/Dockerfile
         image: open-iot-broker:latest
         hostname: broker
-        ports:
-            - 0.0.0.0:15675:15675 # mqtt over ws
         environment:
             RABBITMQ_ERLANG_COOKIE: <erlang-cookie>
 
