--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -48,8 +48,8 @@ stream {
         ssl_prefer_server_ciphers   on;
         ssl_session_timeout         5m;
         ssl_session_tickets         off;
-        ssl_certificate             /etc/nginx/certs/127.0.0.1.crt;
-        ssl_certificate_key         /etc/nginx/certs/127.0.0.1.key;
+        ssl_certificate             /etc/nginx/certs/server_certificate.pem;
+        ssl_certificate_key         /etc/nginx/certs/server_key.pem;
         proxy_pass                  broker:1883;
     }
 
@@ -65,8 +65,8 @@ stream {
         ssl_prefer_server_ciphers   on;
         ssl_session_timeout         5m;
         ssl_session_tickets         off;
-        ssl_certificate             /etc/nginx/certs/127.0.0.1.crt;
-        ssl_certificate_key         /etc/nginx/certs/127.0.0.1.key;
+        ssl_certificate             /etc/nginx/certs/server_certificate.pem;
+        ssl_certificate_key         /etc/nginx/certs/server_key.pem;
         proxy_pass                  broker:15675;
     }
 
