--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,3 +1,4 @@
 FROM jwilder/nginx-proxy:latest
 RUN apt update && apt install net-tools
-COPY ["./proxy/dev.conf", "/etc/nginx/nginx.conf"]
+COPY ["./proxy/nginx.conf", "/etc/nginx/nginx.conf"]
+COPY ["./certs", "/etc/nginx/certs"]
