Fixed problem with wrong docker file definition in production example

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -33,7 +33,7 @@ services:
     broker:
         build:
             context: ./
-            dockerfile: ./Dockerfile
+            dockerfile: ./broker/Dockerfile
         image: open-iot-broker:latest
         hostname: broker
         environment:
