--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -29,6 +29,43 @@ http {
     #gzip  on;
 
     include /etc/nginx/conf.d/*.conf;
+
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
+    upstream wss {
+        server broker:15675;
+    }
+
+    server {
+        listen 15676;
+
+        ssl                         on;
+        ssl_certificate             /etc/nginx/certs/server_certificate.pem;
+        ssl_certificate_key         /etc/nginx/certs/server_key.pem;
+        ssl_prefer_server_ciphers   on;
+        ssl_session_timeout         5m;
+        ssl_session_tickets         off;
+
+        location / {
+            proxy_pass http://wss;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+        }
+    }
+
+    server {
+        listen 15675;
+        location / {
+            proxy_pass http://wss;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+        }
+    }
 }
 daemon off;
 
@@ -51,23 +88,6 @@ stream {
         ssl_certificate             /etc/nginx/certs/server_certificate.pem;
         ssl_certificate_key         /etc/nginx/certs/server_key.pem;
         proxy_pass                  broker:1883;
-    }
-
-    server {
-        listen        15675;
-        proxy_pass    broker:15675;
-    }
-
-    server {
-        listen                      15676;
-        ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers                 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:!DSS';
-        ssl_prefer_server_ciphers   on;
-        ssl_session_timeout         5m;
-        ssl_session_tickets         off;
-        ssl_certificate             /etc/nginx/certs/server_certificate.pem;
-        ssl_certificate_key         /etc/nginx/certs/server_key.pem;
-        proxy_pass                  broker:15675;
     }
 
 }
