--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -16,18 +16,9 @@ services:
             - 15675:15675
             - 15676:15676
         volumes:
-            - /etc/nginx/vhost.d
-            - /usr/share/nginx/html
             - /var/run/docker.sock:/tmp/docker.sock:ro
-            - /etc/nginx/certs
-
-    # let's encrypt auto certificate renewal
-    cert:
-        image: jrcs/letsencrypt-nginx-proxy-companion
-        volumes:
-            - /var/run/docker.sock:/var/run/docker.sock:ro
-        volumes_from:
-            - proxy
+            - ./certs/server_key.pem:/etc/nginx/certs/example.com.key
+            - ./certs/server_certificate.pem:/etc/nginx/certs/example.com.crt
 
     # broker service
     broker:
