--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "cson": "^4.1.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "hat": "0.0.3",
     "javascript-state-machine": "^2.4.0",
+    "json2json": "^0.2.8",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
