Added code highlighting for transformation display and playground

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "hat": "0.0.3",
+    "highlight.js": "^9.12.0",
     "javascript-state-machine": "^2.4.0",
     "json2json": "^0.2.8",
     "jsonwebtoken": "^8.1.0",
