--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -6,7 +6,7 @@ services:
     proxy:
         build:
             context: ./
-            dockerfile: ./proxy/Dockerfile
+            dockerfile: ./Dockerfile-proxy
         image: open-iot-proxy:latest
         ports:
             - 80:80
@@ -24,7 +24,7 @@ services:
     broker:
         build:
             context: ./
-            dockerfile: ./broker/Dockerfile
+            dockerfile: ./Dockerfile-broker
         image: open-iot-broker:latest
         hostname: broker
         environment:
