--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     proxy:
         build:
             context: ./
-            dockerfile: ./proxy/Dockerfile
+            dockerfile: ./Dockerfile-proxy
         image: open-iot-proxy:latest
         ports:
             - 80:80
@@ -23,7 +23,7 @@ services:
     broker:
         build:
             context: ./
-            dockerfile: ./broker/Dockerfile
+            dockerfile: ./Dockerfile-broker
         image: open-iot-broker:latest
         hostname: broker
         environment:
