--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ services:
 script:
 - npm test
 - docker build -t $DOCKER_USERNAME/$REPO_UI:$IMAGE_TAG --file Dockerfile .
-- docker build -t $DOCKER_USERNAME/$REPO_BROKER:$IMAGE_TAG --file Dockerfile-broker
-- docker build -t $DOCKER_USERNAME/$REPO_PROXY:$IMAGE_TAG --file Dockerfile-proxy
-  .
+- docker build -t $DOCKER_USERNAME/$REPO_BROKER:$IMAGE_TAG --file Dockerfile-broker .
+- docker build -t $DOCKER_USERNAME/$REPO_PROXY:$IMAGE_TAG --file Dockerfile-proxy .
 after_success:
 - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
 - docker push $DOCKER_USERNAME/$REPO_UI:$IMAGE_TAG
