Added full unit tests for passport module

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 services:
 - docker
 script:
-- npm test
+- npm run test:coverage
 - docker build -t $DOCKER_USERNAME/$REPO_UI:$IMAGE_TAG --file Dockerfile .
 - docker build -t $DOCKER_USERNAME/$REPO_BROKER:$IMAGE_TAG --file Dockerfile-broker .
 - docker build -t $DOCKER_USERNAME/$REPO_PROXY:$IMAGE_TAG --file Dockerfile-proxy .
