--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "mkdir -p src/public/css && cp node_modules/semantic-ui-css/semantic.min.css src/public/css/",
     "start": "nodemon src/bin/www",
     "test": "mocha --exit --timeout 120000",
+    "test:coverage": "nyc --reporter=text npm test",
     "clean": "rm -Rf src/public/js/dist && mkdir -p src/public/js/dist",
     "watch-js": "npm run clean && watchify src/public/js/src/*.js -o src/public/js/dist/bundle.js -dv --transform [ babelify ]",
     "watch": "npm run watch-js",
@@ -69,6 +70,7 @@
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
     "mockgoose": "^7.3.5",
+    "nyc": "^11.4.1",
     "rewire": "^3.0.2",
     "sinon": "^4.0.2",
     "sinon-chai": "^2.14.0",
