--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon src/bin/www",
     "test": "mocha --exit --timeout 120000",
     "test:coverage": "nyc --reporter=text npm test",
+    "test:coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "clean": "rm -Rf src/public/js/dist && mkdir -p src/public/js/dist",
     "watch-js": "npm run clean && watchify src/public/js/src/*.js -o src/public/js/dist/bundle.js -dv --transform [ babelify ]",
     "watch": "npm run watch-js",
@@ -68,7 +69,9 @@
     "babelify": "^8.0.0",
     "browserify": "^14.5.0",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "mocha": "^4.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "mockgoose": "^7.3.5",
     "nyc": "^11.4.1",
     "rewire": "^3.0.2",
