--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Open IoT project",
   "main": "index.js",
   "scripts": {
-    "postinstall": "mkdir -p src/public/css && cp node_modules/semantic-ui-css/semantic.min.css src/public/css/",
     "start": "nodemon src/bin/www",
-    "test": "mocha --exit --timeout 120000",
-    "test:coverage": "nyc --reporter=text npm test",
+
+    "test": "mocha --exit --timeout 120000 --recursive",
+    "test:coverage": "nyc --reporter=html --reporter=text npm test",
     "test:coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+
+    "postinstall": "mkdir -p src/public/css && cp node_modules/semantic-ui-css/semantic.min.css src/public/css/",
     "clean": "rm -Rf src/public/js/dist && mkdir -p src/public/js/dist",
     "watch-js": "npm run clean && watchify src/public/js/src/*.js -o src/public/js/dist/bundle.js -dv --transform [ babelify ]",
     "watch": "npm run watch-js",
