--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
+    "unzip": "^0.1.11",
     "uuid": "^3.1.0",
     "validator": "^9.1.1",
     "winston": "^2.4.0"
@@ -85,7 +86,8 @@
     "ignore": [
       "test/*",
       "docs/*",
-      "src/public/*"
+      "src/public/*",
+      "src/temp"
     ]
   }
 }
