--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "coveralls": "^3.0.1",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "mockgoose": "^7.3.5",
+    "mongodb-memory-server": "^2.8.0",
     "nyc": "^11.7.2",
     "rewire": "^3.0.2",
     "sinon": "^4.0.2",
