--- a/recipes/aws/stage2.yaml
+++ b/recipes/aws/stage2.yaml
@@ -1,16 +1,23 @@
 AWSTemplateFormatVersion: 2010-09-09
 
-Description: A stack for deploying OpenIoT service in AWS Fargate.
+Description: A stack for deploying OpenIoT service in AWS ECS.
              This is stage2 of two-stage stack set and it creates
+             - EC2 Instance for MongoDB
+             - EC2 Instance for the docker containers
 
 
 # ============================
-# Stack Parameters
+# Stack Parameters.
+# These values are entered by
+# the stack deployer and are
+# used to parametrize the deployment.
 # ============================
 Parameters:
 
   # ============================
   # Parent Stack
+  # We will use the values of
+  # the outputs from there
   # ============================
 
   Stage1Name:
@@ -23,64 +30,82 @@ Parameters:
     MaxLength: 255
     AllowedPattern: '^[a-zA-Z][-a-zA-Z0-9]*$'
 
-  ImageBroker:
-    Type: String
-    Default: pvorotnikov/open-iot-broker:latest
-    Description: The url of a docker image that contains the broker service
-
-  ImageUI:
-    Type: String
-    Default: pvorotnikov/open-iot-ui:latest
-    Description: The url of a docker image that contains the UI service
-
-  ImageProxy:
-    Type: String
-    Default: pvorotnikov/open-iot-proxy:latest
-    Description: The url of a docker image that contains the proxy service
-
   # ============================
-  # Env
+  # Docker images to be used
+  # for the task definitions
   # ============================
 
-  VirtualHost:
-    Type: String
-    Description: How to reach the proxy from Internet
+  # ImageBroker:
+  #   Type: String
+  #   Default: pvorotnikov/open-iot-broker:latest
+  #   Description: The url of a docker image and tag that contains the broker service
 
-  BrokerHost:
-    Type: String
-    Description: How to reach the broker from within UI
+  # ImageUI:
+  #   Type: String
+  #   Default: pvorotnikov/open-iot-ui:latest
+  #   Description: The url of a docker image and tag that contains the UI service
 
-  EncryptionSecret:
-    Type: String
-    Description: Encryption secret
-    MinLength: 1
-    MaxLength: 60
-    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
-    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+  # ImageProxy:
+  #   Type: String
+  #   Default: pvorotnikov/open-iot-proxy:latest
+  #   Description: The url of a docker image and tag that contains the proxy service
 
-  HandlerKey:
-    Type: String
-    Description: Handler key
-    MinLength: 1
-    MaxLength: 60
-    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
-    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+  # ============================
+  # Environment variables to be
+  # set in the task definitions
+  # ============================
 
-  HandlerSecret:
-    Type: String
-    Description: Handler secret
-    MinLength: 1
-    MaxLength: 60
-    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
-    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+  ####################
+  # Used in ui service
+  ####################
 
-  RabbitMQCookie:
-    Type: String
-    Description: RabbitMQ cookie secret
-    MinLength: 1
-    MaxLength: 60
-    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
-    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+  # VirtualHost:
+  #   Type: String
+  #   Description: How to reach the proxy from Internet.
+
+  # BrokerHost:
+  #   Type: String
+  #   Description: How to reach the broker from within UI service.
+
+  # EncryptionSecret:
+  #   Type: String
+  #   Description: Encryption secret, used to encrypt JWT tokens (and other data).
+  #   MinLength: 1
+  #   MaxLength: 60
+  #   AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
+  #   ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+
+  # HandlerKey:
+  #   Type: String
+  #   Description: Handler key usded to authenticate message handler client.
+  #   MinLength: 1
+  #   MaxLength: 60
+  #   AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
+  #   ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+
+  # HandlerSecret:
+  #   Type: String
+  #   Description: Handler secret usded to authenticate message handler client.
+  #   MinLength: 1
+  #   MaxLength: 60
+  #   AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
+  #   ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+
+  ########################
+  # Used in broker service
+  ########################
+
+  # RabbitMQCookie:
+  #   Type: String
+  #   Description: RabbitMQ cookie secret, used to encrypt RabbitMQ cookies.
+  #   MinLength: 1
+  #   MaxLength: 60
+  #   AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
+  #   ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+
+  # ============================
+  # Instance configurations
+  # ============================
 
   KeyName:
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
@@ -210,6 +235,11 @@ Parameters:
     ConstraintDescription: must be a valid EC2 instance type.
 
 
+# ============================
+# Stack Mappings. These mappings
+# are used to produce sensible values for
+# EC2 configurations.
+# ============================
 Mappings:
   AWSInstanceType2Arch:
     t1.micro:
@@ -487,156 +517,47 @@ Mappings:
 # ============================
 Resources:
 
+  # ============================
+  # Mongo
+  # ============================
+
+  MongoVolume1:
+    Type: AWS::EC2::Volume
+    Properties:
+      Size: 40
+      VolumeType: gp2
+      AvailabilityZone: !GetAtt MongoInstance.AvailabilityZone
+
+  MongoVolumeMount1:
+    Type: AWS::EC2::VolumeAttachment
+    Properties:
+      InstanceId: !Ref MongoInstance
+      VolumeId: !Ref MongoVolume1
+      Device: '/dev/sdh'
+
   MongoInstance:
-    Type: 'AWS::EC2::Instance'
+    Type: AWS::EC2::Instance
+
     Metadata:
-      'AWS::CloudFormation::Init':
-        configSets:
-          service_install:
-            - install_cfn
-            - install_docker
-            - install_service
-        install_cfn:
-          files:
-            /etc/cfn/cfn-hup.conf:
-              content: !Join
-                - ''
-                - - |
-                    [main]
-                  - stack=
-                  - !Ref 'AWS::StackId'
-                  - |+
-
-                  - region=
-                  - !Ref 'AWS::Region'
-                  - |+
-
-              mode: '000400'
-              owner: root
-              group: root
-            /etc/cfn/hooks.d/cfn-auto-reloader.conf:
-              content: !Join
-                - ''
-                - - |
-                    [cfn-auto-reloader-hook]
-                  - |
-                    triggers=post.update
-                  - |
-                    path=Resources.MongoInstance.Metadata.AWS::CloudFormation::Init
-                  - 'action=/opt/aws/bin/cfn-init -v '
-                  - '         --stack '
-                  - !Ref 'AWS::StackName'
-                  - '         --resource MongoInstance '
-                  - '         --configsets service_install '
-                  - '         --region '
-                  - !Ref 'AWS::Region'
-                  - |+
-
-              mode: '000400'
-              owner: root
-              group: root
-          services:
-            sysvinit:
-              cfn-hup:
-                enabled: 'true'
-                ensureRunning: 'true'
-                files:
-                  - /etc/cfn/cfn-hup.conf
-                  - /etc/cfn/hooks.d/cfn-auto-reloader.conf
-        install_docker:
+      AWS::CloudFormation::Init:
+        config:
           packages:
             yum:
-              git: []
-              docker: []
-          sources:
-            /var/www/html: 'http://wordpress.org/latest.tar.gz'
+              mdadm: []
+              sysstat: []
           files:
-            /tmp/setup.mysql:
-              content: !Join
+            '/etc/yum.repos.d/10gen.repo':
+              content:
+                Fn::Join:
                 - ''
-                - - 'CREATE DATABASE '
-                  - !Ref DBName
-                  - |
-                    ;
-                  - CREATE USER '
-                  - !Ref DBUser
-                  - '''@''localhost'' IDENTIFIED BY '''
-                  - !Ref DBPassword
-                  - |
-                    ';
-                  - 'GRANT ALL ON '
-                  - !Ref DBName
-                  - .* TO '
-                  - !Ref DBUser
-                  - |
-                    '@'localhost';
-                  - |
-                    FLUSH PRIVILEGES;
-              mode: '000400'
+                - - "[10gen]\n"
+                  - "name=10gen Repository\n"
+                  - "baseurl=http://downloads-distro.mongodb.org/repo/redhat/os/x86_64\n"
+                  - "gpgcheck=0\n"
+              mode: '000644'
               owner: root
               group: root
-            /tmp/create-wp-config:
-              content: !Join
-                - ''
-                - - |
-                    #!/bin/bash -xe
-                  - >
-                    cp /var/www/html/wordpress/wp-config-sample.php
-                    /var/www/html/wordpress/wp-config.php
-                  - sed -i "s/'database_name_here'/'
-                  - !Ref DBName
-                  - |
-                    '/g" wp-config.php
-                  - sed -i "s/'username_here'/'
-                  - !Ref DBUser
-                  - |
-                    '/g" wp-config.php
-                  - sed -i "s/'password_here'/'
-                  - !Ref DBPassword
-                  - |
-                    '/g" wp-config.php
-              mode: '000500'
-              owner: root
-              group: root
-          services:
-            sysvinit:
-              httpd:
-                enabled: 'true'
-                ensureRunning: 'true'
-              mysqld:
-                enabled: 'true'
-                ensureRunning: 'true'
-        configure_wordpress:
-          commands:
-            01_set_mysql_root_password:
-              command: !Join
-                - ''
-                - - mysqladmin -u root password '
-                  - !Ref DBRootPassword
-                  - ''''
-              test: !Join
-                - ''
-                - - '$(mysql '
-                  - !Ref DBName
-                  - ' -u root --password='''
-                  - !Ref DBRootPassword
-                  - ''' >/dev/null 2>&1 </dev/null); (( $? != 0 ))'
-            02_create_database:
-              command: !Join
-                - ''
-                - - mysql -u root --password='
-                  - !Ref DBRootPassword
-                  - ''' < /tmp/setup.mysql'
-              test: !Join
-                - ''
-                - - '$(mysql '
-                  - !Ref DBName
-                  - ' -u root --password='''
-                  - !Ref DBRootPassword
-                  - ''' >/dev/null 2>&1 </dev/null); (( $? != 0 ))'
-            03_configure_wordpress:
-              command: /tmp/create-wp-config
-              cwd: /var/www/html/wordpress
+
     Properties:
       InstanceType: !Ref MongoInstanceType
       SubnetId:
@@ -651,151 +572,114 @@ Resources:
           - AWSInstanceType2Arch
           - !Ref MongoInstanceType
           - Arch
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-MongoDB
-      UserData: !Base64
-        Fn::Join:
+      UserData:
+        Fn::Base64:
+          Fn::Join:
           - ''
-          - - |
-              #!/bin/bash -xe
-            - |
-              yum update -y aws-cfn-bootstrap
-            - '/opt/aws/bin/cfn-init -v '
-            - '         --stack '
-            - !Ref 'AWS::StackName'
-            - '         --resource MongoInstance '
-            - '         --configsets service_install '
-            - '         --region '
-            - !Ref 'AWS::Region'
-            - |+
-
-            - '/opt/aws/bin/cfn-signal -e $? '
-            - '         --stack '
-            - !Ref 'AWS::StackName'
-            - '         --resource MongoInstance '
-            - '         --region '
-            - !Ref 'AWS::Region'
-            - |+
-
-    CreationPolicy:
-      ResourceSignal:
-        Timeout: PT15M
-
-  IoTInstance:
-    Type: 'AWS::EC2::Instance'
-    Properties:
-      InstanceType: !Ref IoTInstanceType
-      SubnetId:
-        Fn::ImportValue: !Sub ${Stage1Name}-PublicSubnetTwo
-      SecurityGroupIds:
-        - Fn::ImportValue: !Sub ${Stage1Name}-IoTSecurityGroup
-      KeyName: !Ref KeyName
-      ImageId: !FindInMap
-        - AWSRegionArch2AMI
-        - !Ref 'AWS::Region'
-        - !FindInMap
-          - AWSInstanceType2Arch
-          - !Ref IoTInstanceType
-          - Arch
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-IoT
-    CreationPolicy:
-      ResourceSignal:
-        Timeout: PT15M
+          - - "#!/bin/bash\n"
+            - 'yum update -y
+'
+            - 'yum install -y mongo-10gen mongo-10gen-server
+'
+            - 'sed -i ''s/bind_ip=127.0.0.1/bind_ip=0.0.0.0/'' /etc/mongod.conf
+'
+            - 'service mongod start
+'
+            - 'echo ''Mongodb Installed''
+'
 
 
   # ============================
   # ROLES
   # ============================
-  ECSRole:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - ecs.amazonaws.com
-            Action:
-              - 'sts:AssumeRole'
-      Path: /
-      Policies:
-        - PolicyName: ecs-service
-          PolicyDocument:
-            Statement:
-              - Effect: Allow
-                Action:
-                  - 'ec2:AttachNetworkInterface'
-                  - 'ec2:CreateNetworkInterface'
-                  - 'ec2:CreateNetworkInterfacePermission'
-                  - 'ec2:DeleteNetworkInterface'
-                  - 'ec2:DeleteNetworkInterfacePermission'
-                  - 'ec2:Describe*'
-                  - 'ec2:DetachNetworkInterface'
-                  - 'elasticloadbalancing:DeregisterInstancesFromLoadBalancer'
-                  - 'elasticloadbalancing:DeregisterTargets'
-                  - 'elasticloadbalancing:Describe*'
-                  - 'elasticloadbalancing:RegisterInstancesWithLoadBalancer'
-                  - 'elasticloadbalancing:RegisterTargets'
-                  - 'route53:ChangeResourceRecordSets'
-                  - 'route53:CreateHealthCheck'
-                  - 'route53:DeleteHealthCheck'
-                  - 'route53:Get*'
-                  - 'route53:List*'
-                  - 'route53:UpdateHealthCheck'
-                  - 'servicediscovery:DeregisterInstance'
-                  - 'servicediscovery:Get*'
-                  - 'servicediscovery:List*'
-                  - 'servicediscovery:RegisterInstance'
-                Resource: '*'
 
-  ECSTaskExecutionRole:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - ecs-tasks.amazonaws.com
-            Action:
-              - 'sts:AssumeRole'
-      Path: /
-      Policies:
-        - PolicyName: AmazonECSTaskExecutionRolePolicy
-          PolicyDocument:
-            Statement:
-              - Effect: Allow
-                Action:
-                  - 'ecr:GetAuthorizationToken'
-                  - 'ecr:BatchCheckLayerAvailability'
-                  - 'ecr:GetDownloadUrlForLayer'
-                  - 'ecr:BatchGetImage'
-                  - 'logs:CreateLogStream'
-                  - 'logs:PutLogEvents'
-                Resource: '*'
+  # ECSRole:
+  #   Type: 'AWS::IAM::Role'
+  #   Properties:
+  #     AssumeRolePolicyDocument:
+  #       Statement:
+  #         - Effect: Allow
+  #           Principal:
+  #             Service:
+  #               - ecs.amazonaws.com
+  #           Action:
+  #             - 'sts:AssumeRole'
+  #     Path: /
+  #     Policies:
+  #       - PolicyName: ecs-service
+  #         PolicyDocument:
+  #           Statement:
+  #             - Effect: Allow
+  #               Action:
+  #                 - 'ec2:AttachNetworkInterface'
+  #                 - 'ec2:CreateNetworkInterface'
+  #                 - 'ec2:CreateNetworkInterfacePermission'
+  #                 - 'ec2:DeleteNetworkInterface'
+  #                 - 'ec2:DeleteNetworkInterfacePermission'
+  #                 - 'ec2:Describe*'
+  #                 - 'ec2:DetachNetworkInterface'
+  #                 - 'elasticloadbalancing:DeregisterInstancesFromLoadBalancer'
+  #                 - 'elasticloadbalancing:DeregisterTargets'
+  #                 - 'elasticloadbalancing:Describe*'
+  #                 - 'elasticloadbalancing:RegisterInstancesWithLoadBalancer'
+  #                 - 'elasticloadbalancing:RegisterTargets'
+  #                 - 'route53:ChangeResourceRecordSets'
+  #                 - 'route53:CreateHealthCheck'
+  #                 - 'route53:DeleteHealthCheck'
+  #                 - 'route53:Get*'
+  #                 - 'route53:List*'
+  #                 - 'route53:UpdateHealthCheck'
+  #                 - 'servicediscovery:DeregisterInstance'
+  #                 - 'servicediscovery:Get*'
+  #                 - 'servicediscovery:List*'
+  #                 - 'servicediscovery:RegisterInstance'
+  #               Resource: '*'
 
-  IoTRole:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - ecs-tasks.amazonaws.com
-            Action:
-              - 'sts:AssumeRole'
-      Path: /
-      Policies:
-        - PolicyName: api-service
-          PolicyDocument:
-            Statement:
-              - Effect: Allow
-                Action:
-                    - 's3:*'
-                Resource:
-                  - !Sub 'arn:${AWS::Partition}:s3:::${Stage1Name}-DataBucket'
-                  - !Sub 'arn:${AWS::Partition}:s3:::${Stage1Name}-DataBucket/*'
+  # ECSTaskExecutionRole:
+  #   Type: 'AWS::IAM::Role'
+  #   Properties:
+  #     AssumeRolePolicyDocument:
+  #       Statement:
+  #         - Effect: Allow
+  #           Principal:
+  #             Service:
+  #               - ecs-tasks.amazonaws.com
+  #           Action:
+  #             - 'sts:AssumeRole'
+  #     Path: /
+  #     Policies:
+  #       - PolicyName: AmazonECSTaskExecutionRolePolicy
+  #         PolicyDocument:
+  #           Statement:
+  #             - Effect: Allow
+  #               Action:
+  #                 - 'ecr:GetAuthorizationToken'
+  #                 - 'ecr:BatchCheckLayerAvailability'
+  #                 - 'ecr:GetDownloadUrlForLayer'
+  #                 - 'ecr:BatchGetImage'
+  #                 - 'logs:CreateLogStream'
+  #                 - 'logs:PutLogEvents'
+  #               Resource: '*'
+
+  # IoTRole:
+  #   Type: 'AWS::IAM::Role'
+  #   Properties:
+  #     AssumeRolePolicyDocument:
+  #       Statement:
+  #         - Effect: Allow
+  #           Principal:
+  #             Service:
+  #               - ecs-tasks.amazonaws.com
+  #           Action:
+  #             - 'sts:AssumeRole'
+  #     Path: /
+  #     Policies:
+  #       - PolicyName: api-service
+  #         PolicyDocument:
+  #           Statement:
+  #             - Effect: Allow
+  #               Action:
+  #                   - 's3:*'
+  #               Resource:
+  #                 - !Sub 'arn:${AWS::Partition}:s3:::${Stage1Name}-DataBucket'
+  #                 - !Sub 'arn:${AWS::Partition}:s3:::${Stage1Name}-DataBucket/*'
