Fixed problem with deleting old plugins when installing new ones (when dealing with subdirs). Updated lifecycle of the app when a new plugin is installed. The process exits. It is up to the container lifecycle to restart the container on process exit (restart: always). Updated reference compose files.

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -27,6 +27,7 @@ services:
     ui:
         image: pvorotnikov/open-iot-ui:latest
         hostname: ui
+        restart: always
         environment:
             VIRTUAL_HOST: example.com                              # how is the host reached
             DB_CONNECTION: mongodb://db.example.com/prod           # db connection string
