Added dev sample configuration for named default network. Bumped up the docker-compose yaml version to 2.1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '2.1'
 
 services:
 
@@ -55,3 +55,8 @@ services:
             - 27017:27017
         hostname: db
         restart: always
+
+networks:
+    default:
+        driver: bridge
+        name: openiot
